// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtworkPage tests should render artwork page component correctly after data is fetched from API 1`] = `
<div
  class="max-w-3xl mx-auto mt-4 bg-white dark:bg-gray-800 p-6 rounded-lg shadow"
  data-testid="main-categories-container"
>
  <div
    class="mb-4 border-b pb-2"
  >
    <p
      class="text-lg text-gray-500 dark:text-gray-300"
    >
      Kolekcja: 
      example collection
    </p>
  </div>
  <div
    data-testid="category-tree"
  >
    <ul>
      <li
        class="mb-2 bg-gray-50 dark:bg-gray-700"
        style="margin-left: 0px;"
      >
        <div
          class="flex justify-between items-center p-2"
        >
          <span>
            Tytuł
            : 
            testowy
          </span>
          <button
            aria-label="Tytuł-fold/expand-button"
            class="text-blue-500 hover:text-blue-700 transition-colors p-1"
          >
            <svg
              class="w-4 h-4"
            />
          </button>
        </div>
      </li>
      <li
        class="mb-2 bg-gray-50 dark:bg-gray-700"
        style="margin-left: 0px;"
      >
        <div
          class="flex justify-between items-center p-2"
        >
          <span>
            Artyści
            : 
            testowi
          </span>
        </div>
      </li>
      <li
        class="mb-2 bg-gray-50 dark:bg-gray-700"
        style="margin-left: 0px;"
      >
        <div
          class="flex justify-between items-center p-2"
        >
          <span>
            Rok
            : 
            966
          </span>
          <button
            aria-label="Rok-fold/expand-button"
            class="text-blue-500 hover:text-blue-700 transition-colors p-1"
          >
            <svg
              class="w-4 h-4"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="mt-10 flex justify-end space-x-4"
  >
    <button
      class="text-sm text-blue-600 hover:underline rounded"
    >
      ← Powrót do kolekcji
    </button>
    <button
      class="flex items-center px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition-colors opacity-50 cursor-not-allowed"
      disabled=""
    >
      <svg
        class="w-5 h-5"
      />
      <span
        class="ml-2"
      >
        Edytuj
      </span>
    </button>
    <button
      class="flex items-center px-4 py-2 rounded border border-red-700 text-red-700 bg-red-50 hover:bg-red-100 transition-colors opacity-50 cursor-not-allowed"
      disabled=""
    >
      <svg
        class="w-5 h-5"
      />
      <span
        class="ml-2"
      >
        Usuń
      </span>
    </button>
  </div>
</div>
`;

exports[`ArtworkPage tests should render category tree correctly after subcategories are hidden by clicking fold buttons 1`] = `
<div
  data-testid="category-tree"
>
  <ul>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2"
      >
        <span>
          Tytuł
          : 
          testowy
        </span>
        <button
          aria-label="Tytuł-fold/expand-button"
          class="text-blue-500 hover:text-blue-700 transition-colors p-1"
        >
          <svg
            class="w-4 h-4"
          />
        </button>
      </div>
    </li>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2"
      >
        <span>
          Artyści
          : 
          testowi
        </span>
      </div>
    </li>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2"
      >
        <span>
          Rok
          : 
          966
        </span>
        <button
          aria-label="Rok-fold/expand-button"
          class="text-blue-500 hover:text-blue-700 transition-colors p-1"
        >
          <svg
            class="w-4 h-4"
          />
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ArtworkPage tests should render category tree correctly after subcategories are shown by clicking expand button 1`] = `
<div
  data-testid="category-tree"
>
  <ul>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2"
      >
        <span>
          Tytuł
          : 
          testowy
        </span>
        <button
          aria-label="Tytuł-fold/expand-button"
          class="text-blue-500 hover:text-blue-700 transition-colors p-1"
        >
          <svg
            class="w-4 h-4"
          />
        </button>
      </div>
      <div>
        <ul>
          <li
            class="mb-2 bg-gray-50 dark:bg-gray-700"
            style="margin-left: 16px;"
          >
            <div
              class="flex justify-between items-center p-2"
            >
              <span>
                Podtytuł
                : 
                testowy podtytuł
              </span>
            </div>
          </li>
        </ul>
      </div>
    </li>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2"
      >
        <span>
          Artyści
          : 
          testowi
        </span>
      </div>
    </li>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2"
      >
        <span>
          Rok
          : 
          966
        </span>
        <button
          aria-label="Rok-fold/expand-button"
          class="text-blue-500 hover:text-blue-700 transition-colors p-1"
        >
          <svg
            class="w-4 h-4"
          />
        </button>
      </div>
      <div>
        <ul>
          <li
            class="mb-2 bg-gray-50 dark:bg-gray-700"
            style="margin-left: 16px;"
          >
            <div
              class="flex justify-between items-center p-2"
            >
              <span>
                Miesiąc
                : 
                Wrzesień
              </span>
              <button
                aria-label="Miesiąc-fold/expand-button"
                class="text-blue-500 hover:text-blue-700 transition-colors p-1"
              >
                <svg
                  class="w-4 h-4"
                />
              </button>
            </div>
            <div>
              <ul>
                <li
                  class="mb-2 bg-gray-50 dark:bg-gray-700"
                  style="margin-left: 16px;"
                >
                  <div
                    class="flex justify-between items-center p-2"
                  >
                    <span>
                      Dzień
                      : 
                      13
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </li>
          <li
            class="mb-2 bg-gray-50 dark:bg-gray-700"
            style="margin-left: 16px;"
          >
            <div
              class="flex justify-between items-center p-2"
            >
              <span>
                Pora roku
                : 
                lato
              </span>
            </div>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;
